# churchos

./: .gitignore  README.md  RENDER_DEPLOY.md  docker-compose.yml  pyproject.toml  render.yaml  vercel.json
backend/: .env.example  .env.render  Dockerfile  conftest.py  manage.py  pyproject.toml  pytest.ini  render_build.sh  requirements.txt
backend/apps/accounts/: admin.py  constants.py  models.py  serializers.py  urls.py  views.py
backend/apps/audit/: admin.py  apps.py  models.py  serializers.py  views.py
backend/apps/budget/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/cellgroups/: admin.py  apps.py  models.py  serializers.py  views.py
backend/apps/communication/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/core/: admin.py  apps.py  exceptions.py  models.py  pagination.py  permissions.py  reports.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/apps/discipleship/: admin.py  apps.py  models.py  serializers.py  views.py
backend/apps/events/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/facility/: admin.py  apps.py  models.py  serializers.py  views.py
backend/apps/finance/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/apps/followup/: admin.py  apps.py  models.py  serializers.py  urls.py  (+1 more)
backend/churchos/: beat_schedule.py  celery.py  urls.py  wsgi.py
frontend/: .env.example  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  eventBus.js  main.js
(+106 files in other folders)
