[project]
name = "churchos"
version = "0.1.0"
description = "churchos"
requires-python = ">=3.12"
dependencies = [
    "Django",
    "gunicorn",
    "whitenoise",
    "psycopg2-binary",
    "django-cors-headers"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
start = "config.wsgi:application"